<resources>
    <string name="app_name">ContactApp</string>

    <string name="tab1">연락처</string>
    <string name="tab2">프로필</string>

    <string name="main_title">개발 2조 전화번호부</string>
    <string name="add_phone_number">연락처 추가</string>
    <string name="profile_name">이름</string>
    <string name="profile_phone_number">전화번호</string>
    <string name="profile_email">이메일</string>
    <string name="profile_event">이벤트</string>
    <string name="finish_button_text">취소</string>
    <string name="submit_button_text">등록</string>

    <string name="item_profile_title">프로필</string>
    <string name="item_profile_message">메시지 보내기</string>
    <string name="item_profile_call_phone">전화 걸기</string>
    <string name="item_profile_name">이    름</string>
    <string name="item_profile_name_value">김 성 진</string>
    <string name="item_profile_phone_number">전화번호</string>
    <string name="item_profile_phone_number_value">010-1234-1234</string>
    <string name="item_profile_email">이 메 일</string>
    <string name="item_profile_email_value">dajf23@gmail.com</string>
    <string name="item_profile_event">이 벤 트</string>
    <string name="item_profile_event_value">000000</string>
</resources>