<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_background"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
    >

    <TextView
        android:id="@+id/addTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/add_phone_number"
        android:textColor="#0A81D7"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addProfileImage"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:src="@drawable/addimage_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addTitleText" />

    <EditText
        android:id="@+id/addNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_name"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/addProfileImage" />

    <EditText
        android:id="@+id/addPhoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_phone_number"
        android:inputType="phone"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/addNameEditText" />

    <EditText
        android:id="@+id/addMailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_email"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/addPhoneNumberEditText" />

    <EditText
        android:id="@+id/addEventEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_event"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/addMailEditText" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEventEditText">

        <Button
            android:id="@+id/finishButton"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="#0A81D7"
            android:fontFamily="@font/notosans_bold"
            android:includeFontPadding="false"
            android:text="@string/finish_button_text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:backgroundTint="#0A81D7"
            android:fontFamily="@font/notosans_bold"
            android:includeFontPadding="false"
            android:text="@string/submit_button_text"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>